# QRCodeMaker

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: main-cicd.yml
app/: build.gradle.kts  proguard-rules.pro
app/schemas/com.payamgr.qrcodemaker.data.database.QrDatabaseImpl/: 1.json
app/src/androidTest/java/com/payamgr/qrcodemaker/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/payamgr/qrcodemaker/test_util/: ActivityTest.kt  Fake.kt  PlatformHelper.kt  Screenshot.kt  SemanticsHelper.kt  StringId.kt
app/src/androidTest/java/com/payamgr/qrcodemaker/view/: AppNavTest.kt  MainActivityTest.kt
app/src/androidTest/java/com/payamgr/qrcodemaker/view/module/: AnimatedVectorTest.kt  ConfirmationTest.kt  ErrorCorrectionModuleTest.kt  InputModuleTest.kt  SplashScreenTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  qrcodemaker.cpp
app/src/main/cpp/include/: qrcodegen.hpp
app/src/main/cpp/qrcode-lib/src/qrcode/: qrcodegen.cpp
app/src/main/cpp/util/: jni-util.cpp  jni-util.h
app/src/main/java/com/payamgr/qrcodemaker/: QrCodeMakerApp.kt
app/src/main/java/com/payamgr/qrcodemaker/data/: NativeQrCodeMaker.kt  NativeQrCodeMakerImpl.kt  QrCodeMaker.kt  QrCodeMakerImpl.kt
app/src/main/java/com/payamgr/qrcodemaker/data/controller/: SplashScreenController.kt  SplashScreenControllerImpl.kt
app/src/main/java/com/payamgr/qrcodemaker/data/database/: QrDatabase.kt
app/src/main/java/com/payamgr/qrcodemaker/data/di/: AppModule.kt  CoroutineModule.kt  DatabaseModule.kt  RepositoryModule.kt  ViewModelModule.kt
app/src/main/java/com/payamgr/qrcodemaker/data/model/: Content.kt  ErrorCorrectionCodeLevel.kt  Input.kt  InputData.kt  InputId.kt  Name.kt  QrCode.kt  QrCodeType.kt  TypeUtil.kt
app/src/main/java/com/payamgr/qrcodemaker/data/repository/: ContentRepository.kt  ContentRepositoryImpl.kt
app/src/main/java/com/payamgr/qrcodemaker/data/util/: ModelExtensions.kt  TypeUtil.kt
app/src/main/java/com/payamgr/qrcodemaker/view/: AppNav.kt  MainActivity.kt  ViewModelBuilder.kt  ViewModelBuilderImpl.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml  splash_screen_icon.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-v31/: themes.xml
app/src/test/java/com/payamgr/qrcodemaker/: ExampleUnitTest.kt
app/src/test/java/com/payamgr/qrcodemaker/data/: QrCodeMakerImplTest.kt
app/src/test/java/com/payamgr/qrcodemaker/test_util/: DbHelper.kt  Fake.kt
buildSrc/src/main/kotlin/: Versions.kt
gradle/wrapper/: gradle-wrapper.properties
scripts/: download-install-qrcode-cpp.sh  take-screenshots.sh
(+57 files in other folders)
